# hellai-app

./: .gitignore  README.md  installation.sh
core/core_service/: .env  Cargo.toml  Dockerfile  README.md  db_instruction.md  docker-compose.yml  init_sql_data.sql  install_core_service.sh
core/core_service/api/: Cargo.toml  build.rs
core/core_service/api/proto/: companies_services.proto  default_service.proto  notes_services.proto  projects_services.proto  tasks_services.proto  user_services.proto
core/core_service/api/src/: lib.rs  my_server.rs
core/core_service/api/src/middleware/: access_check.rs  auth_token.rs  interceptors.rs  mod.rs  validators.rs
core/core_service/api/src/services/: company_service.rs  mod.rs  notes_service.rs  project_service.rs  task_service.rs  user_service.rs
core/core_service/core_database/: Cargo.toml
core/core_service/core_database/src/: lib.rs
core/core_service/core_database/src/entity/: companies.rs  company_roles.rs  global_roles.rs  knowledge_base.rs  mod.rs  notes.rs  passwords.rs  prelude.rs  project_roles.rs  projects.rs  roles.rs  sea_orm_active_enums.rs  subtasks.rs  tasks.rs  user_access.rs  user_companies.rs  user_company.rs  user_company_roles.rs  user_global_roles.rs  user_project_roles.rs  user_projects.rs  users.rs
core/core_service/core_database/src/queries/: companies_query.rs  company_query.rs  mod.rs  notes_query.rs  projects_query.rs  tasks_query.rs  user_query.rs
core/core_service/core_debugger/: Cargo.toml
core/core_service/core_debugger/src/: lib.rs
core/core_service/core_debugger/src/formaters/: core_service_formater.rs  extractor.rs  mod.rs
core/core_service/core_error/: Cargo.toml
core/core_service/core_error/src/: core_errors.rs  lib.rs
core/core_service/migration/: Cargo.toml
core/core_service/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240919_201951_add_test_data.rs
core/core_service/service/: Cargo.toml
core/core_service/service/src/: lib.rs  password_validation.rs
core/core_service/src/: main.rs
hellai-web-client/: Cargo.toml  Dioxus.toml  build.rs
hellai-web-client/assets/: main.css
hellai-web-client/proto/: user_services.proto
hellai-web-client/src/: app_state.rs  main.rs  routing.rs
hellai-web-client/src/app_structs/: mod.rs  project_info.rs  user_data.rs
hellai-web-client/src/components/: toast.rs
hellai-web-client/src/pages/: home_page.rs  log_in_page.rs  mod.rs  splash_page.rs
hellai-web-client/src/utilities/: constants.rs  cookie_manager.rs  mod.rs
installation/: install_protoc.sh
