[package]
name = "hellai-web-client"
version = "0.1.0"
authors = ["Konstantin Yeftifeyev <zoxo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
web-sys = { version = "0.3.72", features = ["HtmlDocument"] }

prost = "0.13"
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }
# tonic-web = "0.12"
# hyper-util = "0.1"
# tower = "0.5"
tonic-web-wasm-client = "0.6"


[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
] }
