[package]
name = "hellai-web-client"
version = "0.1.0"
authors = ["Konstantin Yeftifeyev <zoxo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
web-sys = { version = "0.3.72", features = ["HtmlDocument"] }

prost = "0.13"
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }

uuid = { version = "1.11.0", features = [
    "v4", # Lets you generate random UUIDs
] }

tonic-web-wasm-client = "0.6"
chrono = "0.4.38"
tokio = "1.41.0"
async-std = "1.13.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }          # for uuid webasambly

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
] }
